<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.demoyo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.demoyo.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/navigation_agendar"
        android:name="com.example.demoyo.ui.agendar.AgendarFragment"
        android:label="@string/title_agendar"
        tools:layout="@layout/fragment_agendar" />
    <fragment
        android:id="@+id/navigation_proximascitas"
        android:name="com.example.demoyo.ui.proximascitas.ProximascitasFragment"
        android:label="@string/title_proximascitas"
        tools:layout="@layout/fragment_proximascitas" />
    <fragment
        android:id="@+id/navigation_miscitas"
        android:name="com.example.demoyo.ui.miscitas.MiscitasFragment"
        android:label="@string/title_miscitas"
        tools:layout="@layout/fragment_miscitas" />
</navigation>